--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,19 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'de.mannodermaus.android-junit5'
 }
 
 android {
     namespace 'com.cjmobileapps.duckitandroid'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.cjmobileapps.duckitandroid"
         minSdk 26
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -21,11 +24,26 @@ android {
     }
 
     buildTypes {
+        debug {
+            applicationIdSuffix '.debug'
+            debuggable true
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "version"
+
+    productFlavors {
+        dev {
+            buildConfigField "String", "BASE_URL", "\"https://nametag-duckit-2.uc.r.appspot.com/\""
+            dimension "version"
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
@@ -35,6 +53,7 @@ android {
     }
     buildFeatures {
         compose true
+        buildConfig true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
@@ -48,19 +67,56 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    //todo remove this
+//    implementation 'androidx.core:core-ktx:1.8.0'
+//    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    // Coroutines
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.9'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1'
+
+    // Android Compose
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
+//    implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
-    testImplementation 'junit:junit:4.13.2'
+    implementation 'androidx.navigation:navigation-compose:2.7.1'
+    implementation 'io.coil-kt:coil-compose:2.4.0'
+//    implementation("androidx.compose.material:material-icons-core:1.5.3")
+    implementation("androidx.compose.material:material-icons-extended:1.5.3")
+
+    // Android Compose Testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.43"
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'androidx.test:rules:1.5.0'
+    kapt "com.google.dagger:hilt-compiler:2.43"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
+    // Retrofit 2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Timber logger
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    // Fix Duplicate class
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+
+    // Junit 4
+    testImplementation 'junit:junit:4.13.2'
+
+    // Preferences Datastore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
