--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".DuckItApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DuckItAndroid"
-        tools:targetApi="31">
+        tools:remove="android:appComponentFactory"
+        tools:targetApi="p">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
+            android:windowSoftInputMode="adjustResize"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/activity_name"
             android:theme="@style/Theme.DuckItAndroid">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
