Change java version to 8?

--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Unit Test with Android Emulator Runner
         uses: ReactiveCircus/android-emulator-runner@v2.14.3
         with:
+          java-version: 8
           api-level: 29
           script: ./gradlew connectedCheck
           #./gradlew createDebugCoverageReport:
