--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -23,15 +23,20 @@ jobs:
 #      - uses: actions/checkout@v2
       - uses: codecov/codecov-action@v3
 
-      # Execute unit tests
-      - name: Unit Test with Android Emulator Runner
-        uses: ReactiveCircus/android-emulator-runner@v2.14.3
-        with:
-          api-level: 29
-          script: ./gradlew connectedCheck
-          #./gradlew createDebugCoverageReport:
+#      # Execute unit tests
+#      - name: Unit Test with Android Emulator Runner
+#        uses: ReactiveCircus/android-emulator-runner@v2.14.3
+#        with:
+#          api-level: 29
+#          script: ./gradlew connectedCheck
+#          #./gradlew createDebugCoverageReport:
 
-        # run: ./gradlew testDebugUnitTest
+#         run: ./gradlew testDebugUnitTest
+      - name: Unit Test with Android Emulator Runner
+        uses: codecov/codecov-action@v3
+        with:
+          name: gradle unit test
+          run: ./gradlew testDevDebugUnitTest
 
       - name: generate report
         uses: actions/upload-artifact@v2
