--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
             applicationIdSuffix '.debug'
             debuggable true
             minifyEnabled false
+            testCoverageEnabled true
         }
         release {
             minifyEnabled false
@@ -108,8 +109,13 @@ dependencies {
     // Fix Duplicate class
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
+    // Junit 5
+    testImplementation("org.junit.jupiter:junit-jupiter:5.9.1")
+    testImplementation("org.mockito:mockito-inline:4.7.0")
+
     // Junit 4
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation("junit:junit:4.13.2")
+    testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.9.1")
 
     // Preferences Datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
