--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,8 @@ jobs:
       tag: 2022.08.1
     steps:
       - checkout
-      - run:
-          name: Install OpenJDK 17
-          command: |
-            java-version 17
+      - change-java-version:
+          java-version: 17
 #      - run:
 #          name: Install OpenJDK 17
 #          command: |
