--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,10 @@ jobs:
             java -version
       - android/change-java-version:
           java-version: 17
-      - android/restore-gradle-cache
+#      - android/restore-gradle-cache
       - android/run-tests:
           test-command: ./gradlew testDevDebugUnitTest
-      - android/save-gradle-cache
+#      - android/save-gradle-cache
       - run:
           name: Save test results
           command: |
