--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,10 @@ jobs:
             sudo rm -r /usr/lib/jvm/java-11-openjdk-amd64
             java -version
             ls /usr/lib/jvm
+      - run:
+          name: Reset JAVA_HOME to 17
+          command: |
+            sudo export JAVA_HOME=java-17-openjdk-amd64
       - android/change-java-version:
           java-version: 17
 #      - android/restore-gradle-cache
