--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,8 @@ jobs:
       - run:
           name: Reset JAVA_HOME to 17
           command: |
-            sudo export JAVA_HOME=java-17-openjdk-amd64
+            sudo echo "export JAVA_HOME=java-17-openjdk-amd64" >> "$BASH_ENV"
+            source "$BASH_ENV"
       - android/change-java-version:
           java-version: 17
 #      - android/restore-gradle-cache
