--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,13 +9,13 @@ jobs:
       tag: 2022.08.1
     steps:
       - checkout
-#      - run:
-#          name: Install OpenJDK 17
-#          command: |
-#            sudo apt-get update && sudo apt-get install openjdk-17-jdk
-#            sudo update-alternatives --set java /usr/lib/jvm/java-17-openjdk-amd64/bin/java
-#            sudo update-alternatives --set javac /usr/lib/jvm/java-17-openjdk-amd64/bin/javac
-#            java -version
+      - run:
+          name: Install OpenJDK 17
+          command: |
+            sudo apt-get update && sudo apt-get install openjdk-17-jdk
+            sudo update-alternatives --set java /usr/lib/jvm/java-17-openjdk-amd64/bin/java
+            sudo update-alternatives --set javac /usr/lib/jvm/java-17-openjdk-amd64/bin/javac
+            java -version
 #      - android/change-java-version:
 #          java-version: 17
       - run:
