--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,3 @@
-#todo add better comments
 version: 2.1
 orbs:
   android: circleci/android@2.4.0
@@ -16,24 +15,15 @@ jobs:
             sudo update-alternatives --set java /usr/lib/jvm/java-17-openjdk-amd64/bin/java
             sudo update-alternatives --set javac /usr/lib/jvm/java-17-openjdk-amd64/bin/javac
             java -version
-#      - android/change-java-version:
-#          java-version: 17
-#      - run:
-#          name: Remove Java 11
-#          command: |
-#            sudo rm -r /usr/lib/jvm/java-11-openjdk-amd64
-#            ls /usr/lib/jvm
       - run:
           name: Reset JAVA_HOME to 17
           command: |
             sudo echo "export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> "$BASH_ENV"
             source "$BASH_ENV"
-#      - android/change-java-version:
-#          java-version: 17
-#      - android/restore-gradle-cache
+      - android/restore-gradle-cache
       - android/run-tests:
           test-command: ./gradlew testDevDebugUnitTest
-#      - android/save-gradle-cache
+      - android/save-gradle-cache
       - run:
           name: Save test results
           command: |
@@ -145,7 +135,5 @@ jobs:
 workflows:
   test-and-build:
     jobs:
-      #- unit-test
-      - android-test #todo fix ui test failing and slow as hell
-# todo gradle clean build entire app
-# https://stackoverflow.com/questions/71532385/android-gradle-plugin-requires-java-11-to-run-you-are-currently-using-java-1-8
+      - unit-test
+      - android-test
