--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,10 @@ jobs:
           when: always
       - store_test_results:
           path: ~/test-results/junit
+      - run:
+          name: Save test results
+          command: |
+            ls ~/build/reports/
       - codecov/upload:
           file: ~/build/reports/jacoco/.*xml
   android-test:
