--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
       - run:
           name: Save test results
           command: |
+            find . -type f -regex ".*/build/reports/jacoco/.*xml" -exec cp {} ~/test-results/junit/ \;
             ls ~/build
       - codecov/upload:
           file: ~/build/reports/jacoco/.*xml
