Give explicit report name fix .xml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
             find . -type f -regex ".*/build/reports/jacoco/.*xml" -exec cp {} ~/jacoco-test-results/ \;
             ls -a ~/jacoco-test-results
       - codecov/upload:
-          file: ~/jacoco-test-results/jacocoTestReportDevDebug.xml.xml
+          file: ~/jacoco-test-results/jacocoTestReportDevDebug.xml
   android-test:
     executor:
       name: android/android-machine
