digging down into ls

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,8 +38,9 @@ jobs:
           command: |
             mkdir -p ~/project/jacoco-test-results
             find . -type f -regex ".*/build/reports/jacoco/.*xml" -exec cp {} ~/project/jacoco-test-results/ \;
-            ls -a ~/project
-            cat ~/project/build/reports/jacoco/jacocoTestReportDevDebug/jacocoTestReportDevDebug.xml
+            ls -a ~/project/reports
+            ls -a ~/project/jacoco-test-results
+#            cat ~/project/build/reports/jacoco/jacocoTestReportDevDebug/jacocoTestReportDevDebug.xml
       - codecov/upload:
           file: ~/build/reports/jacoco/jacocoTestReportDevDebug/jacocoTestReportDevDebug.xml
   android-test:
