--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
             mkdir -p ~/project/jacoco-test-results
             find . -type f -regex ".*/build/reports/jacoco/.*xml" -exec cp {} ~/project/jacoco-test-results/ \;
             ls -a ~/project
-            ls -a ~/project/build/reports
+            ls -a ~/project/build
             ls -a ~/project/jacoco-test-results
 #            cat ~/project/build/reports/jacoco/jacocoTestReportDevDebug/jacocoTestReportDevDebug.xml
       - codecov/upload:
