--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,11 +39,11 @@ jobs:
             mkdir -p ~/project/jacoco-test-results
             find . -type f -regex ".*/build/reports/jacoco/.*xml" -exec cp {} ~/project/jacoco-test-results/ \;
             ls -a ~/project
-            ls -a ~/project/build
+            ls -a ~/project/build/kotlin
             ls -a ~/project/jacoco-test-results
 #            cat ~/project/build/reports/jacoco/jacocoTestReportDevDebug/jacocoTestReportDevDebug.xml
       - codecov/upload:
-          file: ~/build/reports/jacoco/jacocoTestReportDevDebug/jacocoTestReportDevDebug.xml
+          file: ~/build/jacoco-test-results/jacocoTestReportDevDebug.xml
   android-test:
     executor:
       name: android/android-machine
