--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,13 +37,13 @@ jobs:
           name: Save test results 2
           command: |
             mkdir -p ~/project/jacoco-test-results
-            find . -type f -regex ".*/build/reports/jacoco/.*xml" -exec cp {} ~/project/jacoco-test-results/ \;
+            find . -type f -regex ".*/build/reports/jacoco/.*xml" -exec cp {} ~/project/ \;
             ls -a ~/project
             ls -a ~/project/build/kotlin
             ls -a ~/project/jacoco-test-results
       #            cat ~/project/build/reports/jacoco/jacocoTestReportDevDebug/jacocoTestReportDevDebug.xml
       - codecov/upload:
-          file: ~/jacoco-test-results/jacocoTestReportDevDebug.xml
+          file: jacocoTestReportDevDebug.xml
   #          file: ~/build/jacoco-test-results/jacocoTestReportDevDebug.xml
   android-test:
     executor:
