--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
             debuggable true
             minifyEnabled false
             // IMPORTANT: If testCoverageEnabled and Unit test break you can not see errors
-            testCoverageEnabled true
+            testCoverageEnabled false
         }
         release {
             minifyEnabled false
