--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.material3:material3-android:1.2.0-beta02'
     implementation 'androidx.navigation:navigation-compose:2.7.1'
     implementation 'io.coil-kt:coil-compose:2.4.0'
     implementation("androidx.compose.material:material-icons-extended:1.5.3")
