--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,10 @@ dependencies {
 
     // Preferences Datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    // Room
+    implementation "androidx.room:room-runtime:2.5.2"
+    annotationProcessor "androidx.room:room-compiler:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
+    implementation("androidx.room:room-ktx:2.5.2")
 }
