--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
             debuggable true
             minifyEnabled false
             // IMPORTANT: If testCoverageEnabled and Unit test break you can not see errors
-            testCoverageEnabled true
+            testCoverageEnabled false
         }
         release {
             minifyEnabled false
@@ -111,7 +111,7 @@ dependencies {
 
     // Junit 5
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.1")
-    testImplementation("org.mockito:mockito-inline:4.7.0")
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
 
     // Junit 4
     testImplementation("junit:junit:4.13.2")
