--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,7 +111,7 @@ dependencies {
 
     // Junit 5
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.1")
-    testImplementation("org.mockito:mockito-inline:4.7.0")
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
 
     // Junit 4
     testImplementation("junit:junit:4.13.2")
