--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,23 +5,23 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".DuckItApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".DuckItApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DuckItAndroid"
         tools:remove="android:appComponentFactory"
         tools:targetApi="p">
         <activity
-            android:name=".ui.MainActivity"
-            android:windowSoftInputMode="adjustResize"
+            android:name=".ui.DuckItActivity"
             android:exported="true"
             android:label="@string/activity_name"
-            android:theme="@style/Theme.DuckItAndroid">
+            android:theme="@style/Theme.DuckItAndroid"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
